# weather-oracle

./: .gitignore  README.md  evaluation_results.json  evaluation_results_v3.json  pyproject.toml  requirements.txt  training_log_v3.csv
src/: __init__.py  cli.py  config.py
src/analysis/: __init__.py  patterns.py
src/api/: __init__.py  geocoding.py  kalshi.py  open_meteo.py  weather_models.py
src/backtesting/: __init__.py  backtest.py
src/calibration/: __init__.py  bias_correction.py  probability.py
src/daemon/: __init__.py  tracker_daemon.py
src/data/: __init__.py  collector.py  preprocessing.py  regions.py
src/db/: database.py
src/evaluation/: metrics.py
src/inference/: __init__.py  ensemble.py  ensemble_v2.py  predictor.py  regional_predictor.py
src/kalshi/: __init__.py  edge.py  edge_oracle.py  edge_v2.py  historical.py  live_scraper.py  scanner.py  scheduler.py
src/model/: weather_net.py  weather_transformer.py
src/models/: oracle.py  oracle_v2.py
src/telegram/: __init__.py  bot.py
src/tracking/: __init__.py  forecast_tracker.py
src/training/: regional_trainer.py  trainer.py
