[project]
name = "weather-oracle"
version = "1.0.0"
description = "Neural network weather forecasting system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "requests>=2.28.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "sqlite-utils>=3.0",
    "scikit-learn>=1.0.0",
]

[project.scripts]
weather-oracle = "src.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
